--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3005
 DB_CNN=mongodb+srv://admin:XPapS7tDBATPn8gw@cluster0.wdqst.mongodb.net/hospitaldb
 JWT_SECRET=palabrasecreta
+
+GOOGLE_ID=138574778966-klieag8uh9077isuun884q72e96155dc.apps.googleusercontent.com
+GOOGLE_SECRET=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
